// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From within the empty-project fixture Minimal project matches expectation 1`] = `
RedwoodProject {
  "cells": undefined,
  "errors": [],
  "filepath": "",
  "layouts": undefined,
  "name": "empty-project",
  "pages": undefined,
  "routers": undefined,
  "sides": undefined,
  "type": "typescript",
  "warnings": [],
}
`;

exports[`From within the example-todo-main fixture Minimal project matches expectation 1`] = `
RedwoodProject {
  "cells": undefined,
  "errors": [],
  "filepath": "",
  "layouts": undefined,
  "name": "example-todo-main",
  "pages": undefined,
  "routers": undefined,
  "sides": undefined,
  "type": "typescript",
  "warnings": [],
}
`;

exports[`From within the example-todo-main-with-errors fixture Minimal project matches expectation 1`] = `
RedwoodProject {
  "cells": undefined,
  "errors": [],
  "filepath": "",
  "layouts": undefined,
  "name": "example-todo-main-with-errors",
  "pages": undefined,
  "routers": undefined,
  "sides": undefined,
  "type": "javascript",
  "warnings": [],
}
`;

exports[`From within the test-project fixture Minimal project matches expectation 1`] = `
RedwoodProject {
  "cells": undefined,
  "errors": [],
  "filepath": "",
  "layouts": undefined,
  "name": "test-project",
  "pages": undefined,
  "routers": undefined,
  "sides": undefined,
  "type": "typescript",
  "warnings": [],
}
`;
